[gd_scene load_steps=8 format=2]

[ext_resource path="res://Test/Space.gd" type="Script" id=1]
[ext_resource path="res://Ship/Hero.tscn" type="PackedScene" id=2]
[ext_resource path="res://Location/Tiles/Tileset.tres" type="TileSet" id=3]
[ext_resource path="res://Location/Scripts/Back_to_ship.gd" type="Script" id=4]
[ext_resource path="res://Figuras/Sprites.png" type="Texture" id=5]
[ext_resource path="res://Ship/Item.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.30702, 8 )

[node name="World2" type="Node2D"]
script = ExtResource( 1 )
GRAVITY = 0.1

[node name="Hero" parent="." instance=ExtResource( 2 )]
position = Vector2( -68, 0 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 16, -52 )
current = true
zoom = Vector2( 0.2, 0.2 )

[node name="Mapa" type="TileMap" parent="."]
modulate = Color( 0.611765, 0.443137, 0, 1 )
tile_set = ExtResource( 3 )
cell_size = Vector2( 8, 8 )
collision_layer = 3
collision_mask = 3
format = 1
tile_data = PoolIntArray( -851980, 0, 65536, -917490, 0, 65536, -786444, 0, 131072, -786433, 0, 196610, -851954, 0, 131072, -720908, 0, 131072, -720902, 0, 196610, -786418, 0, 131072, -655372, 0, 131072, -720891, 0, 196610, -720886, 0, 196610, -720882, 0, 131072, -589836, 0, 131072, -589828, 0, 196610, -655346, 0, 65538, -655345, 0, 196609, -524301, 0, 131074, -524300, 0, 65537, -589809, 0, 65538, -589808, 0, 196609, -458765, 0, 131072, -458759, 0, 196610, -524272, 0, 131072, -393229, 0, 131072, -458736, 0, 131072, -327693, 0, 131072, -327683, 0, 65536, -393205, 0, 196610, -393200, 0, 131072, -262157, 0, 131072, -262148, 0, 0, -262147, 0, 131073, -262146, 0, 2, -327679, 0, 196610, -327673, 0, 196610, -327664, 0, 131072, -196621, 0, 131072, -196611, 0, 196608, -262130, 0, 131074, -262129, 0, 1, -262128, 0, 65537, -131085, 0, 131072, -196594, 0, 131072, -65549, 0, 131072, -131069, 0, 131074, -131068, 0, 1, -131067, 0, 1, -131066, 0, 1, -131065, 0, 1, -131064, 0, 1, -131063, 0, 1, -131062, 0, 1, -131061, 0, 1, -131060, 0, 1, -131059, 0, 1, -131058, 0, 65537, -13, 0, 131072, -65533, 0, 131072, 65523, 0, 65538, 65524, 0, 1, 65525, 0, 1, 65526, 0, 1, 65527, 0, 1, 65528, 0, 1, 65529, 0, 1, 65530, 0, 1, 65531, 0, 1, 65532, 0, 1, 65533, 0, 1, 65534, 0, 1, 65535, 0, 1, 0, 0, 1, 1, 0, 1, 2, 0, 1, 3, 0, 65537, 65536, -5, 0, 131074, -65532, 0 )

[node name="Back_to_ship" type="Area2D" parent="."]
position = Vector2( -88, -8 )
script = ExtResource( 4 )

[node name="Figura" type="Sprite" parent="Back_to_ship"]
modulate = Color( 0.321569, 0.294118, 0.823529, 1 )
rotation = -1.57079
texture = ExtResource( 5 )
vframes = 10
hframes = 10

[node name="Timer" type="Timer" parent="Back_to_ship"]
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Back_to_ship"]
shape = SubResource( 1 )

[node name="Item" parent="." instance=ExtResource( 6 )]
position = Vector2( 85, -93 )
ITEM_TYPE = 1
[connection signal="body_entered" from="Back_to_ship" to="Back_to_ship" method="_on_Back_to_ship_body_entered"]
[connection signal="timeout" from="Back_to_ship/Timer" to="Back_to_ship" method="_on_Timer_timeout"]
